# ruz-calendar-back

./: .gitignore  pyproject.toml
src/: calendar_routes.py  front_routes.py  main.py
